Made date unambiguous regless of locale conventions

--- a/Leaflet.html
+++ b/Leaflet.html
@@ -11,7 +11,6 @@
 
 <meta name="author" content="Matthew Kotorlis" />
 
-<meta name="date" content="2020-03-09" />
 
 <title>Toronto Subway Map</title>
 
@@ -4259,7 +4258,7 @@ summary {
 
 <h1 class="title toc-ignore">Toronto Subway Map</h1>
 <h4 class="author">Matthew Kotorlis</h4>
-<h4 class="date">03/09/2020</h4>
+<h4 class="date">September 3rd, 2020</h4>
 
 </div>
 
@@ -4284,8 +4283,8 @@ head(df)</code></pre>
     leaflet() %&gt;%
     addTiles() %&gt;%
     addMarkers(popup = df[,3])</code></pre>
-<div id="htmlwidget-f35c22e5a0c82a2bb220" style="width:672px;height:480px;" class="leaflet html-widget"></div>
-<script type="application/json" data-for="htmlwidget-f35c22e5a0c82a2bb220">{"x":{"options":{"crs":{"crsClass":"L.CRS.EPSG3857","code":null,"proj4def":null,"projectedBounds":null,"options":{}}},"calls":[{"method":"addTiles","args":["//{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",null,null,{"minZoom":0,"maxZoom":18,"tileSize":256,"subdomains":"abc","errorTileUrl":"","tms":false,"noWrap":false,"zoomOffset":0,"zoomReverse":false,"opacity":1,"zIndex":1,"detectRetina":false,"attribution":"&copy; <a href=\"http://openstreetmap.org\">OpenStreetMap<\/a> contributors, <a href=\"http://creativecommons.org/licenses/by-sa/2.0/\">CC-BY-SA<\/a>"}]},{"method":"addMarkers","args":[[43.750053813,43.73458062,43.72481302,43.716381433,43.709819963,43.698996649,43.684352034,43.674909875,43.667714585,43.668318768,43.667177071,43.659704948,43.654611638,43.650874106,43.647645649,43.645722666,43.649120879,43.652346514,43.656136534,43.661229971,43.665182941,43.670671998,43.676900952,43.682449998,43.688162978,43.698123394,43.706645843,43.725421915,43.744995922,43.761674341,43.769241254,43.781490124],[-79.462342744,-79.449928713,-79.447509462,-79.444029153,-79.441528421,-79.435989533,-79.414535879,-79.407256672,-79.403751969,-79.398672286,-79.39350223,-79.39034904,-79.388295977,-79.386617316,-79.385130483,-79.380462258,-79.378045133,-79.379326503,-79.380729654,-79.382782166,-79.383770788,-79.385950091,-79.388725888,-79.391178237,-79.393284347,-79.397331412,-79.399158462,-79.401877582,-79.405330677,-79.410987148,-79.412911598,-79.415672606],null,null,null,{"interactive":true,"draggable":false,"keyboard":true,"title":"","alt":"","zIndexOffset":0,"opacity":1,"riseOnHover":false,"riseOffset":250},["Downsview","Wilson","Yorkdale","Lawrence West","Glencairn","Eglinton West","St Clair West","Dupont","Spadina","St George","Museum","Queen's Park","St Patrick","Osgoode","St Andrew","Union","King","Queen","Dundas","College","Wellesley","Bloor","Rosedale","Summerhill","St Clair","Davisville","Eglinton","Lawrence","York Mills","Sheppard","North York Centre","Finch"],null,null,null,null,{"interactive":false,"permanent":false,"direction":"auto","opacity":1,"offset":[0,0],"textsize":"10px","textOnly":false,"className":"","sticky":true},null]}],"limits":{"lat":[43.645722666,43.781490124],"lng":[-79.462342744,-79.378045133]}},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-95a820a3c9a1d68a0aee" style="width:672px;height:480px;" class="leaflet html-widget"></div>
+<script type="application/json" data-for="htmlwidget-95a820a3c9a1d68a0aee">{"x":{"options":{"crs":{"crsClass":"L.CRS.EPSG3857","code":null,"proj4def":null,"projectedBounds":null,"options":{}}},"calls":[{"method":"addTiles","args":["//{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",null,null,{"minZoom":0,"maxZoom":18,"tileSize":256,"subdomains":"abc","errorTileUrl":"","tms":false,"noWrap":false,"zoomOffset":0,"zoomReverse":false,"opacity":1,"zIndex":1,"detectRetina":false,"attribution":"&copy; <a href=\"http://openstreetmap.org\">OpenStreetMap<\/a> contributors, <a href=\"http://creativecommons.org/licenses/by-sa/2.0/\">CC-BY-SA<\/a>"}]},{"method":"addMarkers","args":[[43.750053813,43.73458062,43.72481302,43.716381433,43.709819963,43.698996649,43.684352034,43.674909875,43.667714585,43.668318768,43.667177071,43.659704948,43.654611638,43.650874106,43.647645649,43.645722666,43.649120879,43.652346514,43.656136534,43.661229971,43.665182941,43.670671998,43.676900952,43.682449998,43.688162978,43.698123394,43.706645843,43.725421915,43.744995922,43.761674341,43.769241254,43.781490124],[-79.462342744,-79.449928713,-79.447509462,-79.444029153,-79.441528421,-79.435989533,-79.414535879,-79.407256672,-79.403751969,-79.398672286,-79.39350223,-79.39034904,-79.388295977,-79.386617316,-79.385130483,-79.380462258,-79.378045133,-79.379326503,-79.380729654,-79.382782166,-79.383770788,-79.385950091,-79.388725888,-79.391178237,-79.393284347,-79.397331412,-79.399158462,-79.401877582,-79.405330677,-79.410987148,-79.412911598,-79.415672606],null,null,null,{"interactive":true,"draggable":false,"keyboard":true,"title":"","alt":"","zIndexOffset":0,"opacity":1,"riseOnHover":false,"riseOffset":250},["Downsview","Wilson","Yorkdale","Lawrence West","Glencairn","Eglinton West","St Clair West","Dupont","Spadina","St George","Museum","Queen's Park","St Patrick","Osgoode","St Andrew","Union","King","Queen","Dundas","College","Wellesley","Bloor","Rosedale","Summerhill","St Clair","Davisville","Eglinton","Lawrence","York Mills","Sheppard","North York Centre","Finch"],null,null,null,null,{"interactive":false,"permanent":false,"direction":"auto","opacity":1,"offset":[0,0],"textsize":"10px","textOnly":false,"className":"","sticky":true},null]}],"limits":{"lat":[43.645722666,43.781490124],"lng":[-79.462342744,-79.378045133]}},"evals":[],"jsHooks":[]}</script>
 
 
 
